@@ -171,6 +171,7 @@
     <spotbugs.failOnError>true</spotbugs.failOnError>
 
     <graalvm.enable>false</graalvm.enable>
+    <nativeImage.buildArgs></nativeImage.buildArgs>
 
     <!-- The following properties configure the revapi-maven-plugin. -->
     <!-- This property configures whether the revapi-maven-plugin should run. -->
@@ -1022,6 +1023,9 @@
               <argLine>
                 ${defaultSurefireArgLine}
                 ${javaModulesSurefireArgLine}
+                <!-- This is required as the Java 8 based implementation for ReflectionUtils may be loaded by IntelliJ when running tests with later versions of Java. -->
+                <!-- In later versions of Java, java.base doesn't open java.lang.invoke to azure-core, so it needs to be done with this directive. This only affects tests. -->
+                --add-opens java.base/java.lang.invoke=com.azure.core
                 ${additionalSurefireArgLine}
               </argLine>
             </configuration>
@@ -1390,7 +1394,7 @@
             <version>0.9.10</version>  <!-- {x-version-update;org.graalvm.buildtools:native-maven-plugin;external_dependency} -->
             <configuration>
               <skip>${graalvm.enable}</skip>
-              <buildArgs>--no-fallback</buildArgs>
+              <buildArgs>--no-fallback ${nativeImage.buildArgs}</buildArgs>
             </configuration>
             <executions>
               <execution>
